# surrealql.wasm

./: Cargo.toml  Makefile  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: check.yml  ci.yml  publish.yml
lib/: surrealql.d.ts  surrealql.js  v1.d.ts  v1.js  v2.d.ts  v2.js
src/: lib.rs
src/app/: mod.rs
src/err/: mod.rs
src/log/: mod.rs
