[package]
name = "surrealql"
publish = false
edition = "2021"
version = "0.0.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "WebAssembly utility functions for SurrealQL"
repository = "https://github.com/surrealdb/surrealql.wasm"
license = "Apache License 2.0"

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1

[lib]
name = "surrealql"
crate-type = ["cdylib", "rlib"]

[features]
default = []
stack-traces = ["dep:console_error_panic_hook"]

[dependencies]
surrealdb = { git = "https://github.com/surrealdb/surrealdb", rev = "c382fa1", default-features = false , features = ["jwks"]}
ciborium = "0.2.1"
console_error_panic_hook = { version = "0.1.7", optional = true }
fern = "0.6.2"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.115"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["console"] }