[package]
name = "surrealql"
publish = false
edition = "2021"
version = "0.3.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "WebAssembly utility functions for SurrealQL"
repository = "https://github.com/surrealdb/surrealql.wasm"
license = "Apache License 2.0"

[profile.release]
lto = true
strip = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1

[lib]
name = "surrealql"
crate-type = ["cdylib", "rlib"]

[features]
default = []
stack-traces = ["dep:console_error_panic_hook"]

[dependencies]
anyhow = "1.0.99"
console_error_panic_hook = { version = "0.1.7", optional = true }
fern = "0.6.2"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.115"
surrealdb-core = { git = "https://github.com/surrealdb/surrealdb", branch = "main", default-features = false, features = ["jwks"] }
surrealdb-types = { git = "https://github.com/surrealdb/surrealdb", branch = "main" }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["console"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]
